Fixes IE7 headline wrapping issue

--- a/src/packages/modules/language-interstitial-z5/css/language-interstitial-z5.scss
+++ b/src/packages/modules/language-interstitial-z5/css/language-interstitial-z5.scss
@@ -59,7 +59,11 @@
   }
 }
 
-
-
-
-
+.lt-ie8 {
+  .language-interstitial {
+    .full-bleed.container {
+      max-width: 980px;
+      position: relative;
+    }
+  }
+}
